--- a/lab1/zad2/index.html
+++ b/lab1/zad2/index.html
@@ -16,7 +16,6 @@
         <title>Hello, world!</title>
     </head>
     <body>
-    
         <div class="container">
             <div class="row">
                 <div id="logo" class="col-12 item">
@@ -29,7 +28,7 @@
                 <div id="menu-wrapper" class="col-12 item">
                     
                     <nav class="navbar navbar-light navbar-expand-md bg-light">
-                        <a href="#logo" class="navbar-brand">ZPW</a>
+                        <a href="#top" class="navbar-brand">ZPW</a>
                         <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-targe="#navbarNav">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -56,6 +55,28 @@
 
                 </div>
             </div>
+
+            <header>
+                <section id="top" class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-1">ZPW</h1>
+                        <p class="display-4">
+                            Chwytamy chwile
+                        </p>
+                        <p class="lead">
+                            Podziel sie z przyjaciółmi I reszta Swiata swoimi najlepszymi zdjęciami I filmami </p> 
+                        <p>
+                            <strong>Download now on:</strong>
+                        </p>
+                        <a href="#" class="btn btn-lg btn-primary">
+                            App Store
+                        </a>
+                        <a href="#" class="btn btn-lg btn-primary">
+                            Google Play
+                        </a>
+                    </div>
+                </section>
+            </header>
 
             <div class="row">
                 <div id="about" class="col-12 col-sm-6 col-md-4 item">
