--- a/zpw/lab1/zad2/index.html
+++ b/zpw/lab1/zad2/index.html
@@ -17,17 +17,19 @@
     </head>
     <body>
         <div class="container">
+            <!--
             <div class="row">
                 <div id="logo" class="col-12 item">
                     <span>LOGO</span>
                     <span class="fa fa-cloud"></span>
                 </div>
             </div>
+        -->
 
             <div class="row">
                 <div id="menu-wrapper" class="col-12 item">
                     
-                    <nav class="navbar navbar-light navbar-expand-md bg-light">
+                    <nav class="navbar navbar-light navbar-expand-md bg-light fixed-top">
                         <a href="#top" class="navbar-brand">ZPW</a>
                         <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-targe="#navbarNav">
                             <span class="navbar-toggler-icon"></span>
@@ -78,6 +80,26 @@
                 </section>
             </header>
 
+            <div class="container"> 
+                <section id="section-description"> 
+                <h2 class="display-4">Kim jestesmy?</h2> 
+                <p>Lorem Ipsum jest tekstem stosowanym jako
+                przykładowy wypełniacz w przemyśle 
+                poligraficznym. Został po raz pierwszy użyty w XV w
+                . przez nieznanego drukarza do wypełnienia 
+                tekstem próbnej książki.</p> 
+                <p>Pięć wieków później zaczął być używany p
+                rzemyśle elektronicznym, pozostając 
+                praktycznie niezmienionym. Spopularyzował się w lat
+                ach 60. XX w. wraz z publikacją arkuszy 
+                Letrasetu, zawierających fragmenty Lorem Ipsum, a o
+                statnio z zawierającym różne wersje Lorem 
+                Ipsum oprogramowaniem przeznaczonym do realizacji d
+                ruków na komputerach osobistych, jak 
+                Aldus PageMaker</p>
+                </section>
+            </div>
+<!--
             <div class="row">
                 <div id="about" class="col-12 col-sm-6 col-md-4 item">
                     about
@@ -96,7 +118,7 @@
                 </div>
             </div>
         </div>
-
+-->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
