--- a/zpw/lab1/zad2/index.html
+++ b/zpw/lab1/zad2/index.html
@@ -17,15 +17,6 @@
     </head>
     <body>
         <div class="container">
-            <!--
-            <div class="row">
-                <div id="logo" class="col-12 item">
-                    <span>LOGO</span>
-                    <span class="fa fa-cloud"></span>
-                </div>
-            </div>
-        -->
-
             <div class="row">
                 <div id="menu-wrapper" class="col-12 item">
                     
@@ -99,26 +90,43 @@
                 Aldus PageMaker</p>
                 </section>
             </div>
-<!--
-            <div class="row">
-                <div id="about" class="col-12 col-sm-6 col-md-4 item">
-                    about
-                </div>
-                <div id="portfolio" class="col-12 col-sm-6 col-md-4 item">
-                    portfolio
-                </div>
-                <div id="services" class="col-12 col-sm-12 col-md-4 item">
-                    services
-                </div>
-            </div>
 
-            <div class="row">
-                <div id="footer" class="col-12 item">
-                    footer
-                </div>
-            </div>
+            
         </div>
--->
+        <div class="container-full"> 
+            <section id="section-showcase">
+                <div id="carousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
+                        <li data-target="#carousel" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="styles/images/fig1.png" alt="figure 1" class="d-block img-fluid w-100">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="styles/images/fig2.png" alt="figure 2" class="d-block img-fluid w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="styles/images/fig3.png" alt="figure 3" class="d-block img-fluid w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="styles/images/fig4.png" alt="figure 4" class="d-block img-fluid w-100">
+                        </div>
+                    </div>
+                    <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" ariahidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" ariahidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a> 
+                </div>
+            </section>
+        </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
