--- a/zpw/lab1/zad2/index.html
+++ b/zpw/lab1/zad2/index.html
@@ -11,7 +11,7 @@
         <!-- custom styles -->
         
         <link rel="stylesheet" href="styles/index.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/fontawesome.min.css">
 
         <title>Hello, world!</title>
     </head>
@@ -127,6 +127,107 @@
                 </div>
             </section>
         </div>
+
+        <section id="section-cennik">
+            <h2 class="display-4">Wybierz plan cenowy</h2>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Starter</h2>
+                            <h4>Free</h4>
+                            <i class="fa fa-paint-brush mb-4 text-info"></i> 
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Perfect if you only take pictures for fun.</p>
+                        </div>
+                        <ul class="list-group">
+                            <li class="list-group-item">Enhance your photos and videos</li>
+                            <li class="list-group-item">Share on Instagram</li>
+                        </ul>
+                        <div class="card-footer">
+                            <a href="#section-cennik" class="btn btn-success btn-lg">Select plan</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Semi-pro</h2>
+                            <h4>$1.99 / month</h4>
+                            <i class="fa fa-video-camera mb-4 text-info"></i> 
+                        </div>
+                        <div class="card-body"> 
+                            <p class="card-text">Perfect if you're a semi-pro photographer.</p>
+                        </div>
+                        <ul class="list-group">
+                            <li class="list-group-item">Enhance your photos and videos</li>
+                            <li class="list-group-item">Share on Instagram</li>
+                            <li class="list-group-item">Advanced settings</li>
+                        </ul>
+                        <div class="card-footer">
+                            <a href="#section-cennik" class="btn btn-warning btn-lg">Select plan</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Pro</h2>
+                            <h4>$4.99 / month</h4>
+                            <i class="fa fa-instagram mb-4 text-info" ></i> 
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Perfect if you're a pro photographer.</p>
+                        </div>
+                        <ul class="list-group">
+                            <li class="list-group-item">Enhance your photos and videos</li>
+                            <li class="list-group-item">Share on Instagram</li>
+                            <li class="list-group-item">Advanced settings</li>
+                            <li class="list-group-item">Cloud storage</li>
+                        </ul>
+                        <div class="card-footer">
+                            <a href="#section-cennik" class="btn btn-danger btn-lg">Select plan</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+<footer>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
+      Polityka prywatności
+    </button>
+</footer>
+
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Tytuł</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+            <h1>BLE BLA BLAH</h1>
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+            ble ble ble ble bla bla blah blah <br />
+      </div>
+      <div class="modal-footer">
+            <button type="button" class="btn btn-default" datadismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
