--- a/zpw/lab5/shop-app/src/index.html
+++ b/zpw/lab5/shop-app/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HelloWorld</title>
+  <title>ShopApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-product></app-product>
+  <app-products></app-products>
 </body>
 </html>
