--- a/zpw/lab5/shop-app/src/index.html
+++ b/zpw/lab5/shop-app/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-products></app-products>
+  <app-root></app-root>
 </body>
 </html>
